--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" href="/favicon256.png" />
+		<script
+			defer
+			data-domain="petervel.nl"
+			src="https://plausible.io/js/script.js"
+		></script>
 		<title>Spiel Auction Tool</title>
 	</head>
 	<body>
