--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google" content="notranslate" />
 		<link rel="icon" type="image/png" href="/favicon256.png" />
 		<script
 			defer
