--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="google" content="notranslate" />
 		<link rel="icon" type="image/png" href="/favicon256.png" />
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 		<script
 			defer
 			data-domain="petervel.nl"
