PWA done.. I think

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,9 @@
 			data-domain="petervel.nl"
 			src="https://plausible.io/js/script.js"
 		></script>
+		<link rel="manifest" href="/manifest.webmanifest" />
+		<meta name="theme-color" content="#0f5ba3" />
+
 		<title>Spiel Auction Tool</title>
 	</head>
 	<body>
