Added traffic tracker

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,11 @@
 		></script>
 		<link rel="manifest" href="/manifest.webmanifest" />
 		<meta name="theme-color" content="#0f5ba3" />
+		<script
+			defer
+			src="https://cloud.umami.is/script.js"
+			data-website-id="d2ab7a1d-446b-48cc-8cb5-54a9deeba27a"
+		></script>
 
 		<title>Spiel Auction Tool</title>
 	</head>
